modified link text

--- a/Employee/Pages/Payroll/Index.cshtml
+++ b/Employee/Pages/Payroll/Index.cshtml
@@ -47,7 +47,7 @@
                             @Html.DisplayFor(m => item.MiddleName)
                         </td>
                         <td>
-                            <a asp-page="Encode" asp-route-id="@item.ID" class="btn btn-success btn-sm text-white">Attendance</a>
+                            <a asp-page="Encode" asp-route-id="@item.ID" class="btn btn-success btn-sm text-white">Encode Attendance</a>
                         </td>
                         <td>
                             <a asp-page="Compute" asp-route-id="@item.ID" class="btn btn-success btn-sm text-white">Calculate</a>
