--- a/Employee/Pages/Management/Index.cshtml
+++ b/Employee/Pages/Management/Index.cshtml
@@ -27,6 +27,7 @@
                         <th>
                             <label asp-for="EmployeeDatas.FirstOrDefault().MiddleName"></label>
                         </th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -44,6 +45,10 @@
                             </td>
                             <td>
                                 @Html.DisplayFor(m => item.MiddleName)
+                            </td>
+                            <td>
+
+                                <a asp-page="View" asp-route-id="@item.ID" class="btn btn-success btn-sm text-white">View Details</a>
                             </td>
                         </tr>
                     }
